--- a/static/style.css
+++ b/static/style.css
@@ -41,7 +41,8 @@ h4 {
 
 
 #if{
-    align-content: flex-start;
+    position: absolute;
+    margin-top: 25vw;
     width: 100vw;
     height: 75vw;
     border-style: none;
