--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,13 @@ h4 {
     border-style: none;
 }
 
+#bsif {
+    width: 100vw;
+    height: 75vw;
+    border-style: none;
+}
+
+
 .cc {
     text-align: center;
 }
