--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,9 @@ h4 {
     background-color:rgba(228, 213, 185, 0.3) ;
 }
 
+.desc{
+    max-width: 150px;
+}
 #subheader{
     margin: auto;
     width: 50%;
@@ -39,7 +42,12 @@ h4 {
     margin: 0 auto;
 }
 
+.projecttable{
+    margin-left: auto;
 
+    margin-right: auto;
+    max-width: 1400px;
+}
 #if{
     position: absolute;
     margin-top: 30vw;
