--- a/static/style.css
+++ b/static/style.css
@@ -20,18 +20,18 @@ h4 {
 #subheader{
     margin: auto;
     width: 50%;
-    background-color: darkgoldenrod;
+    background-color: #dfd8c8;
 }
 
 #leftdiv{
     width: 50%;
     float: left;
-    background-color: aliceblue;
+    background-color: #dfd8c8;
 }
 #rightdiv{
     width: 50%;
     float: right;
-    background-color: bisque;
+    background-color: #dfd8c8;
 }
 
 #countdown {
@@ -59,7 +59,10 @@ h4 {
     height: 30vw;
     border-style: none;
 }
-
+thead{
+    color: #dfd8c8;
+    background-color:#343148FF;
+}
 
 .cc {
     text-align: center;
@@ -82,6 +85,12 @@ a {
     animation: spin .5s linear infinite;
 }
 
+.alert-primary{
+    border-color: #dfd8c8 ;
+    text-align: center; 
+    background-color: #dfd8c8; 
+    color:#343148FF;
+}
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
